# hiking-app-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  scraper_cron_job.py
.github/workflows/: ci.yml  deploy.yml
app/: database.py  database_service.py  logger.py  models.py  settings.py  tasks.py
app/services/: ai_service.py  cwa_transformer.py  data_fetcher.py  trail_scraper.py
tests/: conftest.py  test_integration.py  test_ut.py
