# pyproject.toml

[project]
name = "hiking-weather-guide"
version = "0.1.0"
description = "AI 登山天氣指南 MVP 專案"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "motor>=3.3.2",
    "pydantic>=2.7.4",
    "google-genai>=0.15.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.11.0",
    "uv>=0.8.22",
    "pre-commit>=4.3.0",
    "httpx>=0.28.1",
    "asgi-lifespan>=2.1.0",
    "anyio>=4.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 告訴 setuptools，唯一需要打包的 package 就在名為 'app' 的資料夾中
packages = ["app"]

[tool.pytest.ini_options]
# 將專案的根目錄 (通常是 . ) 加入到 Python 的搜尋路徑中
# 這能確保在 tests/ 內也能找到 main.py 和 app/
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require external API calls (expensive/slow)",
]
